2019-03-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-2630.c,
	  support/regression/tests/bug-2822.c,
	  support/regression/tests/bug-441448.c,
	  support/regression/tests/bug-460010.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* src/pdk/gen.h,
	  src/pdk/gen.c:
	  Fix arithmetic right shift, jump on &, static function pointer initalization.

2019-03-12 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2854.c,
	  support/regression/tests/gcc-torture-execute-arith-rand-ll.c,
	  support/regression/tests/bug-2222.c,
	  support/regression/tests/bug-2231.c,
	  support/regression/tests/bug-2427.c,
	  support/regression/tests/bug-2611.c,
	  support/regression/tests/bug-2890326.c,
	  support/regression/tests/bug3474855.c,
	  support/regression/tests/bug3475630.c,
	  support/regression/tests/gcc-torture-execute-20021120-1.c,
	  support/regression/tests/gcc-torture-execute-20030916-1.c,
	  support/regression/tests/gcc-torture-execute-20121108-1.c,
	  support/regression/tests/qsort.c,
	  support/regression/tests/bug-2188.c,
	  support/regression/tests/bug-2304.c,
	  support/regression/tests/bug-2501.c,
	  support/regression/tests/bug-2568.c,
	  support/regression/tests/bug-2621.c,
	  support/regression/tests/bug-2764.c,
	  support/regression/tests/gcc-torture-execute-pr39501.c,
	  support/regression/tests/gcc-torture-execute-pr78586.c,
	  support/regression/tests/bug1723128.c,
	  support/regression/tests/bug3410878.c,
	  support/regression/tests/ctype.c,
	  support/regression/tests/gcc-torture-execute-20030313-1.c,
	  support/regression/tests/p99-conformance.c,
	  support/regression/tests/scott-compare3.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* support/regression/tests/gcc-torture-execute-divcmp-2.c,
	  support/regression/tests/staticinit.c:
	  Disable tests that fail in annoying ways.