@@ -2957,7 +2957,7 @@ genPointerSet (iCode *ic)
       
       for (int i = 0; !bit_field ? i < size : blen > 0; i++, blen -= 8)
         {
-          if (!ptr_aop && aopIsLitVal (right->aop, i, 1, 0))
+          if (!ptr_aop && aopIsLitVal (right->aop, i, 1, 0) && !(bit_field || blen >= 8))
             {
               emit2 ("clear", "%s+%d", left->aop->aopu.immd, left->aop->aopu.immd_off + i);
               cost (1, 1);
