@@ -3,11 +3,17 @@
 	* support/regression/tests/bug-2630.c,
 	  support/regression/tests/bug-2822.c,
 	  support/regression/tests/bug-441448.c,
-	  support/regression/tests/bug-460010.c:
+	  support/regression/tests/bug-460010.c,
+          support/regression/tests/bug-2712.c,
+          support/regression/tests/bug1665511.c,
+	  support/regression/tests/bug1757671.c,
+	  support/regression/tests/bug1928022.c:
 	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
 	* src/pdk/gen.h,
 	  src/pdk/gen.c:
-	  Fix arithmetic right shift, jump on &, static function pointer initalization.
+	  Fix arithmetic right shift, jump on &, static function pointer initalization, zeroing of bit-fields.
+	* src/SDCCglue.c:
+	  Fix pdk pointer initalization corner case.
 
 2019-03-12 Philipp Klaus Krause <pkk AT spth.de>
 
